--- a/src/views/signup.hbs
+++ b/src/views/signup.hbs
@@ -1,1 +1,46 @@
-<h1>Sign up Page</h1>
+<div class="flex flex-col items-center justify-center flex-grow min-h-screen bg-white">
+    <!-- Logo -->
+    <a href="./index.html"><i class="fa-brands fa-threads fa-3x"></i></a>
+    <div class="text-center w-full max-w-[386px] sm-custom:max-w-[418px] p-6 gap-0 mb-2">
+        <!-- Heading -->
+        <h1 class="mb-4 text-xl font-bold">Sign up</h1>
+        <!-- Form -->
+        <form id="signup-form" class="flex flex-col gap-2" method="POST" action="" onsubmit="return process(event) ">
+            <!-- Email input -->
+            <div>
+                <label for="email" class="sr-only">Email</label>
+                <input type="email" id="email" class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl" name="email" placeholder="Email" required>
+            </div>
+        
+            <!-- Username input -->
+            <div>
+                <label for="username" class="sr-only">Username</label>
+                <input type="text" id="username" class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl" name="username" placeholder="Username" required>
+                <small id="username-error" class="hidden text-red-500">Username must be unique and follow the rules!</small>
+            </div>
+        
+            <!-- Password Input -->
+            <div>
+                <label for="password" class="sr-only">Password</label>
+                <input type="password" id="password" class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl" name="password" placeholder="Password" required>
+            </div>
+        
+            <!-- Submit Button -->
+            <button id="signup-button" type="submit" class="w-full p-4 font-medium text-white bg-black text-opacity-40 rounded-2xl">
+                Sign up
+            </button>
+        </form>
+
+        <div class="flex items-center py-5 mt-4">
+            <hr class="flex-grow">
+            <small class="mx-2 opacity-40 ">Already have an account?</small>
+            <hr class="flex-grow">
+        </div>
+
+        <button id="login-button" type="button" class="w-full p-4 font-medium text-white bg-black rounded-2xl" onclick="window.location.href='./login.html'">
+            Log in
+        </button>
+    </div>
+</div>
+
+<script src="/js/signup.js"></script>
