--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -612,15 +612,6 @@ video {
   position: relative;
 }
 
-.inset-0 {
-  inset: 0px;
-}
-
-.inset-x-0 {
-  left: 0px;
-  right: 0px;
-}
-
 .bottom-0 {
   bottom: 0px;
 }
@@ -673,10 +664,6 @@ video {
   top: 1rem;
 }
 
-.top-1\/2 {
-  top: 50%;
-}
-
 .z-10 {
   z-index: 10;
 }
@@ -689,22 +676,6 @@ video {
   z-index: 1002;
 }
 
-.z-50 {
-  z-index: 50;
-}
-
-.z-\[2000\] {
-  z-index: 2000;
-}
-
-.z-\[1000\] {
-  z-index: 1000;
-}
-
-.z-0 {
-  z-index: 0;
-}
-
 .float-right {
   float: right;
 }
@@ -713,9 +684,9 @@ video {
   margin: 0px;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .mb-9 {
@@ -738,16 +709,8 @@ video {
   margin-top: 0.5rem;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mr-4 {
-  margin-right: 1rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
+.block {
+  display: block;
 }
 
 .flex {
@@ -779,32 +742,8 @@ video {
   height: 100vh;
 }
 
-.h-auto {
-  height: auto;
-}
-
-.h-12 {
-  height: 3rem;
-}
-
-.h-6 {
-  height: 1.5rem;
-}
-
-.max-h-\[60vh\] {
-  max-height: 60vh;
-}
-
-.max-h-\[70vh\] {
-  max-height: 70vh;
-}
-
-.max-h-\[80vh\] {
-  max-height: 80vh;
-}
-
-.max-h-\[50vh\] {
-  max-height: 50vh;
+.max-h-\[300px\] {
+  max-height: 300px;
 }
 
 .w-1\/2 {
@@ -819,92 +758,8 @@ video {
   width: 100vw;
 }
 
-.w-1\/12 {
-  width: 8.333333%;
-}
-
-.w-11\/12 {
-  width: 91.666667%;
-}
-
-.w-12 {
-  width: 3rem;
-}
-
-.w-\[calc\(\)\] {
-  width: calc();
-}
-
-.w-\[calc\(100\)\] {
-  width: calc(100);
-}
-
-.w-\[calc\(100\%-\)\] {
-  width: calc(100% - );
-}
-
-.w-\[calc\(50\%-\)\] {
-  width: calc(50% - );
-}
-
-.w-\[calc\(50\%-320\)\] {
-  width: calc(50% - 320);
-}
-
-.w-\[calc\(50\%-320px\)\] {
-  width: calc(50% - 320px);
-}
-
-.w-\[calc\(\(50\%-320px\)\)\] {
-  width: calc((50% - 320px));
-}
-
-.w-\[calc\(\(50\%-320px\)\/2\)\] {
-  width: calc((50% - 320px) / 2);
-}
-
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-2\/5 {
-  width: 40%;
-}
-
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-32 {
-  width: 8rem;
-}
-
-.w-1\/4 {
-  width: 25%;
-}
-
-.w-1\/5 {
-  width: 20%;
-}
-
-.w-1\/6 {
-  width: 16.666667%;
-}
-
-.w-36 {
-  width: 9rem;
-}
-
 .min-w-10 {
   min-width: 2.5rem;
-}
-
-.min-w-1 {
-  min-width: 0.25rem;
-}
-
-.max-w-\[640px\] {
-  max-width: 640px;
 }
 
 .flex-1 {
@@ -921,21 +776,6 @@ video {
 
 .-translate-x-1\/2 {
   --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-0 {
-  --tw-translate-y: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-10 {
-  --tw-translate-y: 2.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-1\/2 {
-  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -963,12 +803,12 @@ video {
   cursor: pointer;
 }
 
-.resize-none {
-  resize: none;
+.cursor-text {
+  cursor: text;
 }
 
-.resize {
-  resize: both;
+.resize-none {
+  resize: none;
 }
 
 .flex-col {
@@ -979,20 +819,12 @@ video {
   place-items: center;
 }
 
-.content-center {
-  align-content: center;
-}
-
 .items-center {
   align-items: center;
 }
 
 .justify-center {
   justify-content: center;
-}
-
-.justify-between {
-  justify-content: space-between;
 }
 
 .justify-around {
@@ -1082,11 +914,6 @@ video {
   background-color: rgb(3 3 3 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#f0f0f0\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 240 240 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#ffffff\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1111,6 +938,11 @@ video {
   background-color: transparent;
 }
 
+.bg-vampire-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(10 10 10 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1118,79 +950,6 @@ video {
 
 .bg-white\/10 {
   background-color: rgb(255 255 255 / 0.1);
-}
-
-.bg-red-salsa {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 48 64 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#4b4b4b\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 75 75 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#\] {
-  background-color: #;
-}
-
-.bg-\[\#a2a2a2\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(162 162 162 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#d5d5d5\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(213 213 213 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#181818\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 24 24 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#\#969696\] {
-  background-color: ##969696;
-}
-
-.bg-\[\#969696\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(150 150 150 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#8b8b8b\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(139 139 139 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#8c8c8c\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(140 140 140 / var(--tw-bg-opacity));
-}
-
-.bg-vampire-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(10 10 10 / var(--tw-bg-opacity));
-}
-
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
-.bg-eerie-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 24 24 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#fafafa\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(250 250 250 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50 {
@@ -1207,14 +966,6 @@ video {
 
 .p-4 {
   padding: 1rem;
-}
-
-.p-10 {
-  padding: 2.5rem;
-}
-
-.p-5 {
-  padding: 1.25rem;
 }
 
 .px-3 {
@@ -1257,26 +1008,6 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.px-7 {
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
-}
-
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
 .pb-1 {
   padding-bottom: 0.25rem;
 }
@@ -1289,8 +1020,20 @@ video {
   padding-bottom: 9rem;
 }
 
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
 .pl-4 {
   padding-left: 1rem;
+}
+
+.pr-10 {
+  padding-right: 2.5rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
 }
 
 .pt-1 {
@@ -1303,30 +1046,6 @@ video {
 
 .pt-16 {
   padding-top: 4rem;
-}
-
-.pl-2 {
-  padding-left: 0.5rem;
-}
-
-.pr-10 {
-  padding-right: 2.5rem;
-}
-
-.pr-2 {
-  padding-right: 0.5rem;
-}
-
-.pr-20 {
-  padding-right: 5rem;
-}
-
-.pr-40 {
-  padding-right: 10rem;
-}
-
-.pr-32 {
-  padding-right: 8rem;
 }
 
 .text-center {
@@ -1376,11 +1095,6 @@ video {
   color: rgb(116 192 252 / var(--tw-text-opacity));
 }
 
-.text-\[\#b1b1b1\] {
-  --tw-text-opacity: 1;
-  color: rgb(177 177 177 / var(--tw-text-opacity));
-}
-
 .text-\[\#ff3042\] {
   --tw-text-opacity: 1;
   color: rgb(255 48 66 / var(--tw-text-opacity));
@@ -1421,29 +1135,12 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-sonic-silver {
-  --tw-text-opacity: 1;
-  color: rgb(119 119 119 / var(--tw-text-opacity));
+.text-opacity-40 {
+  --tw-text-opacity: 0.4;
 }
 
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
-.text-gray-800 {
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
-}
-
-.placeholder-gray-400::-moz-placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
-}
-
-.placeholder-gray-400::placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
+.opacity-0 {
+  opacity: 0;
 }
 
 .opacity-100 {
@@ -1452,10 +1149,6 @@ video {
 
 .opacity-40 {
   opacity: 0.4;
-}
-
-.opacity-0 {
-  opacity: 0;
 }
 
 .shadow-lg {
@@ -1475,12 +1168,6 @@ video {
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
-.backdrop-blur-sm {
-  --tw-backdrop-blur: blur(4px);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1495,28 +1182,6 @@ video {
   transition-duration: 150ms;
 }
 
-.transition-opacity {
-  transition-property: opacity;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition-transform {
-  transition-property: transform;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition-colors {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.delay-200 {
-  transition-delay: 200ms;
-}
-
 .duration-200 {
   transition-duration: 200ms;
 }
@@ -1529,26 +1194,8 @@ video {
   transition-duration: 75ms;
 }
 
-.duration-500 {
-  transition-duration: 500ms;
-}
-
-.duration-1000 {
-  transition-duration: 1000ms;
-}
-
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.placeholder\:text-sonic-silver::-moz-placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(119 119 119 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-sonic-silver::placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(119 119 119 / var(--tw-text-opacity));
 }
 
 .placeholder\:text-spanish-gray::-moz-placeholder {
@@ -1598,11 +1245,6 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.hover\:text-cultured-active:hover {
-  --tw-text-opacity: 1;
-  color: rgb(244 245 247 / var(--tw-text-opacity));
-}
-
 .hover\:underline:hover {
   text-decoration-line: underline;
 }
@@ -1614,11 +1256,6 @@ video {
 .dark\:border-charleston-green:is(.dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(45 45 45 / var(--tw-border-opacity));
-}
-
-.dark\:border-gray-700:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-color: rgb(55 65 81 / var(--tw-border-opacity));
 }
 
 .dark\:bg-chinese-black:is(.dark *) {
@@ -1634,47 +1271,6 @@ video {
 .dark\:bg-vampire-black:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(10 10 10 / var(--tw-bg-opacity));
-}
-
-.dark\:bg-\[\#030303\]:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(3 3 3 / var(--tw-bg-opacity));
-}
-
-.dark\:bg-gray-800:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-
-.dark\:bg-black:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.dark\:bg-white:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.dark\:bg-light-gray:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(213 213 213 / var(--tw-bg-opacity));
-}
-
-.dark\:bg-opacity-0:is(.dark *) {
-  --tw-bg-opacity: 0;
-}
-
-.dark\:bg-opacity-30:is(.dark *) {
-  --tw-bg-opacity: 0.3;
-}
-
-.dark\:bg-opacity-40:is(.dark *) {
-  --tw-bg-opacity: 0.4;
-}
-
-.dark\:bg-opacity-50:is(.dark *) {
-  --tw-bg-opacity: 0.5;
 }
 
 .dark\:bg-opacity-10:is(.dark *) {
@@ -1699,31 +1295,6 @@ video {
 .dark\:text-white:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.dark\:text-gray-200:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
-}
-
-.dark\:text-gray-300:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-
-.dark\:text-gray-400:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
-.dark\:placeholder-gray-500:is(.dark *)::-moz-placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-placeholder-opacity));
-}
-
-.dark\:placeholder-gray-500:is(.dark *)::placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-placeholder-opacity));
 }
 
 .dark\:placeholder\:text-sonic-silver:is(.dark *)::-moz-placeholder {
@@ -1756,77 +1327,6 @@ video {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
   }
-
-  .sm\:py-5 {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-  }
-}
-
-@media (min-width: 700px) {
-  .mobile\:mt-6 {
-    margin-top: 1.5rem;
-  }
-
-  .mobile\:flex {
-    display: flex;
-  }
-
-  .mobile\:max-h-\[50vh\] {
-    max-height: 50vh;
-  }
-
-  .mobile\:w-1\/2 {
-    width: 50%;
-  }
-
-  .mobile\:w-2\/5 {
-    width: 40%;
-  }
-
-  .mobile\:w-\[640px\] {
-    width: 640px;
-  }
-
-  .mobile\:max-w-\[600px\] {
-    max-width: 600px;
-  }
-
-  .mobile\:gap-4 {
-    gap: 1rem;
-  }
-
-  .mobile\:rounded-xl {
-    border-radius: 0.75rem;
-  }
-
-  .mobile\:border-none {
-    border-style: none;
-  }
-
-  .mobile\:bg-lotion {
-    --tw-bg-opacity: 1;
-    background-color: rgb(250 250 250 / var(--tw-bg-opacity));
-  }
-
-  .mobile\:py-1 {
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
-  }
-
-  .mobile\:pb-10 {
-    padding-bottom: 2.5rem;
-  }
-
-  .mobile\:hover\:bg-gray-200:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-  }
-
-  .dark\:mobile\:bg-vampire-black:is(.dark *) {
-    --tw-bg-opacity: 1;
-    background-color: rgb(10 10 10 / var(--tw-bg-opacity));
-  }
 }
 
 @media (min-width: 768px) {
@@ -1854,48 +1354,20 @@ video {
     display: none;
   }
 
-  .md\:h-screen {
-    height: 100vh;
-  }
-
-  .md\:h-\[60vh\] {
-    height: 60vh;
-  }
-
-  .md\:h-\[40vh\] {
-    height: 40vh;
-  }
-
   .md\:h-auto {
     height: auto;
+  }
+
+  .md\:h-screen {
+    height: 100vh;
   }
 
   .md\:max-h-\[50vh\] {
     max-height: 50vh;
   }
 
-  .md\:max-h-\[60vh\] {
-    max-height: 60vh;
-  }
-
-  .md\:max-h-\[40vh\] {
-    max-height: 40vh;
-  }
-
-  .md\:max-h-\[0vh\] {
-    max-height: 0vh;
-  }
-
   .md\:max-h-\[70vh\] {
     max-height: 70vh;
-  }
-
-  .md\:min-h-\[60vh\] {
-    min-height: 60vh;
-  }
-
-  .md\:min-h-\[40vh\] {
-    min-height: 40vh;
   }
 
   .md\:w-1\/2 {
@@ -1906,28 +1378,12 @@ video {
     width: 5rem;
   }
 
-  .md\:w-\[640px\] {
-    width: 640px;
-  }
-
-  .md\:w-2\/5 {
-    width: 40%;
-  }
-
-  .md\:w-3\/4 {
-    width: 75%;
-  }
-
   .md\:w-\[320px\] {
     width: 320px;
   }
 
-  .md\:w-\[321px\] {
-    width: 321px;
-  }
-
-  .md\:w-\[318px\] {
-    width: 318px;
+  .md\:w-\[640px\] {
+    width: 640px;
   }
 
   .md\:min-w-\[320px\] {
@@ -1936,10 +1392,6 @@ video {
 
   .md\:max-w-\[600px\] {
     max-width: 600px;
-  }
-
-  .md\:max-w-md {
-    max-width: 28rem;
   }
 
   .md\:flex-col {
@@ -1977,11 +1429,6 @@ video {
     background-color: rgb(250 250 250 / var(--tw-bg-opacity));
   }
 
-  .md\:bg-vampire-black {
-    --tw-bg-opacity: 1;
-    background-color: rgb(10 10 10 / var(--tw-bg-opacity));
-  }
-
   .md\:p-4 {
     padding: 1rem;
   }
@@ -1999,31 +1446,6 @@ video {
   .md\:py-3 {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
-  }
-
-  .md\:py-4 {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-  }
-
-  .md\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
-  .md\:py-5 {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-  }
-
-  .md\:py-6 {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-  }
-
-  .md\:py-10 {
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
   }
 
   .md\:pb-10 {
