--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -1,7 +1,13 @@
 <!-- Sidebar -->
 <div id="mobile-more"
-    class="fixed z-10 top-2 left-2 p-2 opacity-40 hover:opacity-100 cursor-pointer rounded-xl md:hidden">
+    class="fixed z-20 top-2 left-2 p-2 opacity-40 hover:opacity-100 cursor-pointer rounded-xl md:hidden">
     <i class="fa-solid fa-bars" onclick="showLogOutMobile()"></i>
+</div>
+
+<div id="mobile-logo" class="z-20 p-2 md fixed top-2 left-1/2 -translate-x-1/2 md:hidden">
+    <a href="./index.html">
+        <i class="fa-brands fa-threads fa-2xl"></i>
+    </a>
 </div>
 
 <nav
@@ -71,8 +77,7 @@
         const popup = document.createElement('div');
         popup.classList.add('logout-popup', 'absolute', 'z-20', 'bg-white', 'border', 'rounded-xl', 'shadow-lg', 'py-2', 'pl-2', 'pr-2', 'dark:bg-eerie-black', 'dark:border-charleston-green', 'cursor-pointer');
         popup.style.top = `${document.getElementById('more').getBoundingClientRect().top - popup.offsetHeight - 20}px`;
-        {{!-- popup.style.left = `${document.getElementById('more').getBoundingClientRect().left + document.getElementById('more').offsetWidth}px`; --}}
-        popup.style.left = `1rem`;
+        popup.style.left = `${document.getElementById('more').getBoundingClientRect().left + document.getElementById('more').offsetWidth}px`;
 
         const logoutButton = document.createElement('button');
         logoutButton.textContent = 'Log out';
