--- a/src/views/signup2.hbs
+++ b/src/views/signup2.hbs
@@ -1,6 +1,6 @@
 <div class="flex flex-col items-center justify-center flex-grow min-h-screen bg-white">
     <!-- Logo -->
-    <a href="./index.html"><i class="fa-brands fa-threads fa-3x"></i></a>
+    <a href="/"><i class="fa-brands fa-threads fa-3x"></i></a>
     <div class="text-center w-full max-w-[386px] sm-custom:max-w-[418px] p-6 gap-0 mb-2">
         
         <!-- Heading -->
@@ -20,8 +20,6 @@
             </div>
 
             <!-- Submit Button -->
-            <!-- Web tĩnh nên tạm thời sử dụng type = button
-                    và dùng onclick điều hướng đến trang chủ, coi như đã đăng nhập -->
             <button id="submit-button" type="submit"
                 class="w-full p-4 font-medium text-white bg-black text-opacity-40 rounded-2xl"
                 >
@@ -42,7 +40,7 @@
         <!-- Signup Redirect -->
         <button id="login-button" type="button"
                 class="w-full p-4 font-medium text-white bg-black rounded-2xl"
-                onclick="window.location.href='./login.html'">
+                onclick="window.location.href='/login'">
                 Log in
         </button>
     </div>
