--- a/src/views/forgotpassword.hbs
+++ b/src/views/forgotpassword.hbs
@@ -1,6 +1,6 @@
 <div class="flex flex-col items-center justify-center flex-grow min-h-screen bg-white">
     <!-- Logo -->
-    <a href="./index.html"><i class="fa-brands fa-threads fa-3x"></i></a>
+    <a href="/"><i class="fa-brands fa-threads fa-3x"></i></a>
     <div class="text-center w-full max-w-[386px] sm-custom:max-w-[418px] p-6 gap-0 mb-2">
         
         <!-- Heading -->
@@ -27,8 +27,6 @@
             
 
             <!-- Submit Button -->
-            <!-- Web tĩnh nên tạm thời sử dụng type = button
-                    và dùng onclick điều hướng đến trang chủ, coi như đã đăng nhập -->
             <button id="send-button" type="button"
                 class="w-full p-4 font-medium text-white bg-black text-opacity-40 rounded-2xl"
                 onclick="window.location.href='./resetPassword.html'">
@@ -45,10 +43,10 @@
         </div>
 
 
-        <!-- Signup Redirect -->
+        <!-- Login Redirect -->
         <button id="login-button" type="button"
                 class="w-full p-4 font-medium text-white bg-black rounded-2xl"
-                onclick="window.location.href='./login.html'">
+                onclick="window.location.href='/login'">
                 Log in
         </button>
     </div>
