--- a/src/views/signup.hbs
+++ b/src/views/signup.hbs
@@ -1,6 +1,6 @@
 <div class="flex flex-col items-center justify-center flex-grow min-h-screen bg-white">
     <!-- Logo -->
-    <a href="./index.html"><i class="fa-brands fa-threads fa-3x"></i></a>
+    <a href="/"><i class="fa-brands fa-threads fa-3x"></i></a>
     <div class="text-center w-full max-w-[386px] sm-custom:max-w-[418px] p-6 gap-0 mb-2">
         <!-- Heading -->
         <h1 class="mb-4 text-xl font-bold">Sign up</h1>
@@ -37,7 +37,7 @@
             <hr class="flex-grow">
         </div>
 
-        <button id="login-button" type="button" class="w-full p-4 font-medium text-white bg-black rounded-2xl" onclick="window.location.href='./login.html'">
+        <button id="login-button" type="button" class="w-full p-4 font-medium text-white bg-black rounded-2xl" onclick="window.location.href='/login'">
             Log in
         </button>
     </div>
