--- a/src/views/resetpassword.hbs
+++ b/src/views/resetpassword.hbs
@@ -9,7 +9,7 @@
         <p class="mb-4 opacity-40">Enter your new password.</p>
 
         <!-- Form -->
-        <form id="resetpassword-form" class="flex flex-col gap-2" method="POST" action="#" onsubmit="process(event)">
+        <form id="resetPasswordForm" class="flex flex-col gap-2" method="POST" action="#" onsubmit="process(event)">
             
             <div>
                 <label for="password" class="sr-only form-lable">Password</label>
@@ -31,13 +31,12 @@
             <div class="mb-3 form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" 
                 id="showPassword" value="true"
-                    onchange="showPasswords(this.checked)">
-                
+                    onchange="showPasswords(this.checked)">                
                 <label class="form-check-label opacity-40" for="showPassword">Show Passwords</label>
             </div>
 
             <!-- Submit Button -->
-            <button id="send-button" type="submit"
+            <button id="UpdateBtn" type="submit"
                 class="w-full p-4 font-medium text-white bg-black text-opacity-40 rounded-2xl"
                 >
                 Update
@@ -55,7 +54,7 @@
 
 
         <!-- Signup Redirect -->
-        <button id="login-button" type="button"
+        <button id="loginBtn" type="button"
                 class="w-full p-4 font-medium text-white bg-black rounded-2xl"
                 onclick="window.location.href='/login'">
                 Log in
