--- a/src/views/forgotpassword.hbs
+++ b/src/views/forgotpassword.hbs
@@ -17,7 +17,7 @@
                 <label for="email" class="sr-only">Email</label>
                 <input 
                     type="email" 
-                    id="Email"
+                    id="email"
                     class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl"
                     name="email" 
                     placeholder="Email" 
@@ -27,9 +27,9 @@
             
 
             <!-- Submit Button -->
-            <button id="send-button" type="button"
+            <button id="sendBtn" type="button"
                 class="w-full p-4 font-medium text-white bg-black text-opacity-40 rounded-2xl"
-                onclick="window.location.href='./resetPassword.html'">
+                onclick="window.location.href='/resetPassword'">
                 Send a reset link
             </button>
         </form>
@@ -44,7 +44,7 @@
 
 
         <!-- Login Redirect -->
-        <button id="login-button" type="button"
+        <button id="loginBtn" type="button"
                 class="w-full p-4 font-medium text-white bg-black rounded-2xl"
                 onclick="window.location.href='/login'">
                 Log in
