--- a/src/views/signup.hbs
+++ b/src/views/signup.hbs
@@ -5,7 +5,7 @@
         <!-- Heading -->
         <h1 class="mb-4 text-xl font-bold">Sign up</h1>
         <!-- Form -->
-        <form id="signup-form" class="flex flex-col gap-2" method="POST" action="" onsubmit="return process(event) ">
+        <form id="signupForm" class="flex flex-col gap-2" method="POST" action="" onsubmit="return process(event) ">
             <!-- Email input -->
             <div>
                 <label for="email" class="sr-only">Email</label>
@@ -26,7 +26,7 @@
             </div>
         
             <!-- Submit Button -->
-            <button id="signup-button" type="submit" class="w-full p-4 font-medium text-white bg-black text-opacity-40 rounded-2xl">
+            <button id="signupBtn" type="submit" class="w-full p-4 font-medium text-white bg-black text-opacity-40 rounded-2xl">
                 Sign up
             </button>
         </form>
@@ -37,7 +37,8 @@
             <hr class="flex-grow">
         </div>
 
-        <button id="login-button" type="button" class="w-full p-4 font-medium text-white bg-black rounded-2xl" onclick="window.location.href='/login'">
+        <button id="loginBtn" type="button" class="w-full p-4 font-medium text-white bg-black rounded-2xl" 
+        onclick="window.location.href='/login'">
             Log in
         </button>
     </div>
